@@ -8,6 +8,7 @@ ChnageLog
     * rename metadata.*filaname to metadata.*path where appropriate
     * check gcode extensions ".gcode", ".gc", ".g", ".gco" for FDM
     * bugfix: don't fail on extracting metadata from non-existing files
+    * introduce basic ErrorState instances in errors.py and use in __init__.py
 
 0.2.0 (2020-12-14)
 
